k8s/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: costume-rental
  labels:
    name: costume-rental
